--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Reveal Darmanin",
+  "name": "APEROspace",
   "version": "1.0",
-  "description": "Reveal the true nature of Darmanin",
+  "description": "Festive times at Lisi",
   "permissions": [
     "activeTab"
   ],
